# ciip-tum

hw01/: library.h
hw02/: CMakeLists.txt  combinatorics.cpp
hw03/: contact_list.cpp  contact_list.h
hw04/: vm.cpp  vm.h
hw05/: CMakeLists.txt  run.cpp  token.h  validator.cpp  validator.h
hw06/: vector.cpp
hw07/: client.cpp  client.h  connection.cpp  connection.h  filedescriptor.cpp  filedescriptor.h  server.cpp  server.h  socket.cpp  socket.h
hw08/: audio.cpp  audio.h  document.cpp  document.h  file.cpp  file.h  filecontent.cpp  filecontent.h  filesystem.cpp  filesystem.h  image.cpp  image.h  run.cpp  video.cpp
hw09/: vector.h
hw10/: bencode.h  primes.h  quadruple.h  run.cpp
hw11/: constexprmap.h
hw12/: logger.cpp  logger.h  monitor.cpp  monitor.h
tests/hw02/: test02.cpp
